# chefbot

./: .gitignore  chefbot.py  chefbot_main.py  pyproject.toml  requirements.txt
paths/: paths.py
